adjusting sizing here, were having some width issues causing channel to wrap to next line causing message to be pushed lower

--- a/css/base.css
+++ b/css/base.css
@@ -2,8 +2,8 @@
 body { font: 19px Helvetica, Arial; }
 form { padding: 3px; position: fixed; bottom: 0; width: 100%; border-color: #000; border-top-style: solid; border-top-width: 1px;}
 form input { border-style: solid; border-width: 1px; padding: 10px; width: 85%; margin-right: .5%; }
-.emoteImg { width: 21px}
-.profImg { width: 50px; vertical-align: text-top;}
-#messages { list-style-type: none; margin: 0; padding: 0; width: 16% }
+.emoteImg { width: 20px}
+.profImg { width: 45px; vertical-align: text-top;}
+#messages { list-style-type: none; margin: 0; padding: 0; width: 19% }
 #messages li { border-bottom-color: blueviolet; border-bottom-width: 4px; padding: 2px 5px; background-color: aqua; min-height: 60px  }
 .badge { width: 15px}
